# MIVisionX

./: CMakeLists.txt
amd_openvx/openvx/api/: vx_api.cpp
amd_openvx/openvx/include/: vx_ext_amd.h
amd_openvx/openvx/include/VX/: vx_compatibility.h  vx_vendors.h
amd_openvx_extensions/: CMakeLists.txt
amd_openvx_extensions/amd_rpp/: CMakeLists.txt
amd_openvx_extensions/amd_rpp/include/: internal_publishKernels.h  internal_rpp.h  kernels.h  kernels_rpp.h  vx_ext_rpp.h
amd_openvx_extensions/amd_rpp/source/: absolute_difference.cpp  accumulate.cpp  accumulate_weighted.cpp  add.cpp  bilateral_filter.cpp  bitwiseAND.cpp  bitwiseNOT.cpp  bitwise_exclusive_OR.cpp  bitwise_inclusive_OR.cpp  blur.cpp  brightness.cpp  brightness_contrast.cpp  contrast.cpp  flip.cpp  gamma_corrections.cpp  hue.cpp  internal_publishKernels.cpp  kernel_rpp.cpp  saturation.cpp  subtract.cpp
samples/gdf/: blur.gdf  blur_24.gdf  blur_8.gdf  brightness.gdf  brightness_24.gdf  brightness_8.gdf  brightrpp.gdf  contrast.gdf  contrast_24.gdf  contrast_8.gdf  flip.gdf  flip_24.gdf  flip_8.gdf  hue.gdf  saturation.gdf
utilities/: CMakeLists.txt
